# analyze-repo-manifest

./: README.md  pyproject.toml
analyze_repo_manifest/: args.py  cli.py  manifest.py  model.py  parse.py  search.py
analyze_repo_manifest/display/: __init__.py  display_default.py  display_json.py  display_xml.py  display_yaml.py
tests/: test_manifest_parser.py
tests/data/manifests/: default.xml
